tests/invalid_inputs/sema/sizeof_void_expr.cpp

void f() {

}

void g() {
	sizeof(f());	// error
}
